fixed nav link falling off screen with margin and padding set to 0

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -23,9 +23,9 @@ nav ul {
     justify-content: space-around;
     list-style: none;
     font-family: 'Inter', sans-serif;
-    font-size: 1.5rem;
-    margin-top: 1%;
-    padding-top: 3%;
+    font-size: 1rem;
+    padding: 0;
+    margin:0%
 }
 
 nav ul li a {
@@ -77,7 +77,7 @@ font-family: 'Zilla Slab', serif; */
 
 #first-image img {
     /* width: 100%; */
-    flex: 300px;
+    flex: 50%;
 }
 
 .sub-images {
